--- a/package.json
+++ b/package.json
@@ -1,39 +1,28 @@
 {
-  "name": "GamingCompendium",
-  "version": "0.0.1",
-  "private": true,
+  "name": "gaming-compendium",
+  "version": "1.0.0",
+  "main": "index.ts",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "expo": "~52.0.27",
+    "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-native": "0.76.6",
+    "react-native-modal": "^13.0.1",
+    "react-native-screens": "~4.4.0",
+    "react-native-safe-area-context": "4.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "15.0.1",
-    "@react-native-community/cli-platform-android": "15.0.1",
-    "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.76.6",
-    "@react-native/eslint-config": "0.76.6",
-    "@react-native/metro-config": "0.76.6",
-    "@react-native/typescript-config": "0.76.6",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4"
+    "@types/react": "~18.3.12",
+    "typescript": "^5.3.3"
   },
-  "engines": {
-    "node": ">=18"
-  }
+  "private": true
 }
