--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.27",
     "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.6",
+    "react": "^18.3.1",
+    "react-native": "^0.76.6",
     "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-safe-area-context": "4.12.0"
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
